--- a/Accountview.html
+++ b/Accountview.html
@@ -3,12 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User</title>
-    <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <h1> USERNAME</h1>
+    <h1><img src="iconhack2023.png" z-index="1" width="200" height="200">
+        <br> USERNAME</h1>
     <nav>
-        <a class="NAV" button href="TARview.html">Home</a>
+        <a class="NAV" button href="home.html">Home</a>
     </nav>
     <div class="bio">
         description of person 
