--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         About
     </h1>
     <nav>
-        <a class="NAV" button href="TARview.html">About</a>
+        <a class="NAV" button href="Home.html">About</a>
     </nav>
     <main class="wrapper">
         <p style="font: size 48px;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
@@ -22,7 +22,7 @@
 
 Spencer Slife<br>
 Saje Cowell<br>
-Charlie Gillund<br>
+Charlie Gillund<br><br>
 #Final Goal<br>
 
 TAR pit<br> Tar pit is a website that allows users easy access to code the main goal<br>
