--- a/postView.html
+++ b/postView.html
@@ -5,7 +5,9 @@
       <img src="iconhack2023.png" z-index="1" width="200" height="200">
       <br>TARPIT
     </h1>
-  
+    <nav>
+      <a class="NAV" button href="Home.html">About</a>
+  </nav>
     <div class="login" style="margin-top: 10%;">
       
       <input id="name" class="name" type="name" placeholder="Project Name"  required>
@@ -18,7 +20,7 @@
     </div>
   
     <div class="login">
-    <button class="login" onclick="savePost()" style="font-size: 16pt"; type="post" href="home.html">Post</button>
+    <button class="login" onclick="savePost()" style="font-size: 16pt"; type="post" href="Home.html">Post</button>
         <br>
     
     </div>
