--- a/forgot.html
+++ b/forgot.html
@@ -1,4 +1,4 @@
-<form action="home.html" method="post">
+<form action="Home.html" method="post">
     <link rel="stylesheet" href="home.css">
     <title>Create Account</title>
     <h1>
